--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -2026,9 +2026,19 @@ body {
             .info {
               @include flex-jc-ai(space-between, center);
 
+              .tags {
+                & a {
+                  background-color: #eed370;
+                  padding: 5px 20px;
+                  font-size: 16px;
+                  text-transform: capitalize;
+                  color: #1d2933;
+                }
+              }
+
               @media (max-width: 470px) {
                 .tags {
-                  & span {
+                  & a {
                     font-size: 14px;
                   }
                 }
