--- a/src/css/global.css
+++ b/src/css/global.css
@@ -158,6 +158,49 @@ a {
   margin: 0 auto;
 }
 
+.more-click {
+  margin-bottom: 10px;
+  display: inline-block;
+  font-family: "BPGVenuri2010";
+  font-size: 18px;
+  color: #798996;
+  text-decoration: underline;
+  line-height: 22px;
+  cursor: pointer;
+}
+.more-click:hover {
+  color: #000000;
+}
+
+.text {
+  max-width: 724px;
+  width: 100%;
+}
+.text h5 {
+  font-family: "BPGVenuri2010";
+  font-size: 40px;
+  line-height: 45px;
+  color: #1d2933;
+  margin-bottom: 45px;
+}
+.text .more-texts {
+  display: none;
+}
+.text.show-more .more-texts {
+  display: inline-block;
+}
+.text .texts {
+  color: #000000;
+  font-family: "DejaVuSans";
+  font-size: 18px;
+  line-height: 26px;
+  margin-bottom: 8px;
+}
+
+.swiper-slide.active-letter {
+  background-color: #eed370;
+}
+
 .rotate {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
@@ -514,11 +557,11 @@ body main section.poster .container {
   max-width: 1536px;
   width: 100%;
 }
-body main section.poster .container .text {
+body main section.poster .container .main-text {
   max-width: 469px;
   width: 100%;
 }
-body main section.poster .container .text p {
+body main section.poster .container .main-text p {
   font-size: 66px;
   line-height: 76px;
   color: #fff9b4;
@@ -893,7 +936,7 @@ body main section.bank-results .container .pagination .page-numbers .page-num {
       -ms-flex-align: center;
           align-items: center;
 }
-body main section.bank-results .container .pagination .page-numbers .page-num:first-child {
+body main section.bank-results .container .pagination .page-numbers .page-num.active-page {
   background-color: #eed370;
 }
 body main section.signup-login {
@@ -1613,38 +1656,6 @@ body main section.about-project-section .container .project {
           justify-content: space-between;
   margin-right: 10%;
 }
-body main section.about-project-section .container .project .text {
-  max-width: 724px;
-  width: 100%;
-}
-body main section.about-project-section .container .project .text h5 {
-  font-family: "BPGVenuri2010";
-  font-size: 40px;
-  line-height: 45px;
-  color: #1d2933;
-  margin-bottom: 45px;
-}
-body main section.about-project-section .container .project .text .texts {
-  color: #000000;
-  font-family: "DejaVuSans";
-  font-size: 18px;
-  line-height: 26px;
-  margin-bottom: 8px;
-}
-body main section.about-project-section .container .project .text .texts .more-texts {
-  display: none;
-}
-body main section.about-project-section .container .project .text .more-click {
-  font-family: "BPGVenuri2010";
-  font-size: 18px;
-  color: #798996;
-  text-decoration: underline;
-  line-height: 22px;
-  cursor: pointer;
-}
-body main section.about-project-section .container .project .text .more-click:hover {
-  color: #000000;
-}
 body main section.about-project-section .container .project .show-more .texts .more-texts {
   display: inline;
 }
@@ -1910,9 +1921,8 @@ body main section.contact-form .container .form form textarea:focus {
 body main section.contact-form .container .form form :first-child {
   margin-top: 0;
 }
-body main section.contact-form .container .form form input[type=button] {
+body main section.contact-form .container .form form input#sendButton {
   width: 140px;
-  height: 62px;
   background: #798996;
   color: #fff;
   font-size: 18px;
@@ -1932,7 +1942,7 @@ body main section.contact-form .container .form form input[type=button] {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-body main section.contact-form .container .form form input[type=button]:hover {
+body main section.contact-form .container .form form input#sendButton:hover {
   background-color: #eed370;
   color: #1d2933;
 }
@@ -2731,7 +2741,6 @@ body main section.definition-offer .container .definition-header-1 .definition-t
           align-items: center;
 }
 body main section.definition-offer .container .definition-header-1 .definition-title .info .tags a {
-  background-color: #eed370;
   padding: 5px 20px;
   font-size: 16px;
   text-transform: capitalize;
@@ -2965,9 +2974,15 @@ body footer .container .left-block-social .social-icons {
   display: -ms-flexbox;
   display: flex;
   margin-top: 20px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
-body footer .container .left-block-social .social-icons .circle {
-  margin-right: 70px;
+body footer .container .left-block-social .social-icons a {
+  color: white;
+  font-size: x-large;
+}
+body footer .container .left-block-social .social-icons a .circle {
   width: 46px;
   height: 46px;
   border-radius: 50%;
@@ -2984,10 +2999,6 @@ body footer .container .left-block-social .social-icons .circle {
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
-}
-body footer .container .left-block-social .social-icons .circle a {
-  color: white;
-  font-size: x-large;
 }
 body footer .container .left-block-social .social-icons .insta:hover {
   background-color: #eed370;
@@ -3333,10 +3344,10 @@ body footer .container .tablet-responsive {
     width: 218px;
     margin-right: 20%;
   }
-  body main section.poster .container .text {
+  body main section.poster .container .main-text {
     width: 220px;
   }
-  body main section.poster .container .text p {
+  body main section.poster .container .main-text p {
     font-size: 31px;
     line-height: normal;
   }
@@ -3622,12 +3633,8 @@ body main section.bank-section .container .alphabets-search .double .left-alphab
     margin-bottom: 10px;
     margin-top: 0;
   }
-  body footer .container .left-block-social .social-icons .insta {
-    margin-right: 40px;
-  }
   body footer .container .left-block-social .social-icons .fb {
     margin-right: 0;
-    margin-left: -30px;
   }
 }
 @media only screen and (max-width: 1200px) and (min-width: 768px) {
@@ -4200,12 +4207,11 @@ body footer .container .tablet-responsive .contact-info p a:visited:hover {
     margin-bottom: 10px;
     margin-top: 0;
   }
-  body footer .container .left-block-social .social-icons .insta {
-    margin-right: 40px;
-  }
   body footer .container .left-block-social .social-icons .fb {
     margin-right: 0;
-    margin-left: -30px;
+  }
+  body footer .container .left-block-social .social-icons .twitter {
+    margin: 0 10px;
   }
   body footer .container .middle-block {
     text-align: center;
