--- a/src/css/global.css
+++ b/src/css/global.css
@@ -892,19 +892,19 @@ body main section.bank-results .container .pagination {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
 }
 body main section.bank-results .container .pagination .left-arrow {
-  display: none;
+  cursor: pointer;
 }
 body main section.bank-results .container .pagination .right-arrow {
-  display: none;
+  cursor: pointer;
 }
 body main section.bank-results .container .pagination .page-numbers {
   display: -webkit-box;
@@ -1842,6 +1842,26 @@ body main section.new-term .container .inputs-container form .new-term-select-co
   background-color: #798996;
   border: 1px solid #798996;
 }
+body main .login-required {
+  font-family: "BPGVenuri2010";
+  color: #1d2933;
+}
+body main .login-required .container {
+  padding: 100px 0;
+}
+body main .login-required .container h2 {
+  display: block;
+  font-size: 40px;
+  border-bottom: 1px solid #000000;
+}
+body main .login-required .container h3 {
+  margin: 40px 0;
+  font-size: 30px;
+}
+body main .login-required .container h3 a {
+  font-size: 26px;
+  font-weight: bold;
+}
 body main section.contact-form .container {
   padding: 132px 0px;
   display: -webkit-box;
@@ -2296,7 +2316,7 @@ body main .profile-section .container .right-inner .profile-termins-result .resu
 }
 body main .profile-section .container .right-inner .profile-termins-result .result .termin-tag-social h2 {
   font-family: "DejaVuSans";
-  font-size: 40px;
+  font-size: 30px;
   color: #1d2933;
   text-transform: uppercase;
 }
@@ -2335,7 +2355,7 @@ body main .profile-section .container .right-inner .profile-termins-result .resu
 }
 body main .profile-section .container .right-inner .profile-termins-result .result .description h2 {
   font-family: "DejaVuSans";
-  font-size: 40px;
+  font-size: 26px;
   color: #1d2933;
   margin-bottom: 17px;
 }
@@ -2535,7 +2555,7 @@ body main .profile-section .container .right-inner .my-terms .term .title .term-
 body main .profile-section .container .right-inner .my-terms .term .title .term-title h2 {
   font-family: sans-serif;
   text-transform: uppercase;
-  font-size: 40px;
+  font-size: 30px;
 }
 @media (max-width: 580px) {
   body main .profile-section .container .right-inner .my-terms .term .title .term-title h2 {
@@ -2609,7 +2629,7 @@ body main .profile-section .container .right-inner .my-terms .term .definition .
           align-items: flex-end;
 }
 body main .profile-section .container .right-inner .my-terms .term .definition .definition-box .definition-info h2 {
-  font-size: 40px;
+  font-size: 26px;
   margin-bottom: 9px;
 }
 @media (max-width: 580px) {
@@ -3287,6 +3307,23 @@ body footer .container .tablet-responsive {
     font-size: 29px;
     line-height: 30px;
   }
+  body main .login-required {
+    font-family: "BPGVenuri2010";
+    color: #1d2933;
+  }
+  body main .login-required .container {
+    padding: 100px 0;
+  }
+  body main .login-required .container h2 {
+    font-size: 29px;
+    line-height: 30px;
+  }
+  body main .login-required .container h3 {
+    font-size: 20px;
+  }
+  body main .login-required .container h3 a {
+    font-size: 18px;
+  }
   body main section.about-project-section .container {
     min-width: 262px;
     width: 90%;
@@ -3527,9 +3564,6 @@ body main section.bank-section .container .alphabets-search .double .left-alphab
     height: 40px;
   }
   body main section.bank-results .container .pagination {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     width: 100%;
   }
   body main section.bank-results .container .pagination .left-arrow {
@@ -4117,9 +4151,6 @@ body footer .container .tablet-responsive .contact-info p a:visited:hover {
     height: 25px;
   }
   body main section.bank-results .container .pagination {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     width: 100%;
   }
   body main section.bank-results .container .pagination .left-arrow {
