--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -530,7 +530,6 @@ body {
             margin: 30px 0 60px 0;
             padding: 20px 0 20px 20px;
             position: relative;
-
             .like-number {
               position: absolute;
               top: 40%;
@@ -596,13 +595,13 @@ body {
           }
         }
         .pagination {
-          @include flex-jc-ai(center, center);
+          @include flex-jc-ai(space-evenly, center);
           width: 100%;
           .left-arrow {
-            display: none;
+            cursor: pointer;
           }
           .right-arrow {
-            display: none;
+            cursor: pointer;
           }
           .page-numbers {
             @include flex-jc-ai(center, center);
@@ -1316,7 +1315,27 @@ body {
       }
     }
     //
-
+    //login_required page
+    .login-required {
+        font-family: $venuri;
+        color: $darkBlue;
+        .container {
+          padding: 100px 0;
+          h2{
+            display: block;
+            font-size: 40px;
+            border-bottom: 1px solid $black;
+        }
+        h3{
+          margin: 40px 0;
+          font-size: 30px;
+          a{
+            font-size: 26px;  
+            font-weight: bold;
+          }
+        }
+        }
+    }
     // Contact
     section.contact-form {
       .container {
@@ -1662,7 +1681,7 @@ body {
                 }
                 h2 {
                   font-family: $dejavu;
-                  font-size: 40px;
+                  font-size: 30px;
                   color: $darkBlue;
                   text-transform: uppercase;
                 }
@@ -1693,7 +1712,7 @@ body {
                 }
                 h2 {
                   font-family: $dejavu;
-                  font-size: 40px;
+                  font-size: 26px;
                   color: $darkBlue;
                   margin-bottom: 17px;
                 }
@@ -1859,7 +1878,7 @@ body {
                   h2 {
                     font-family: sans-serif;
                     text-transform: uppercase;
-                    font-size: 40px;
+                    font-size: 30px;
                     @media (max-width: 580px) {
                       font-size: 22px;
                     }
@@ -1915,7 +1934,7 @@ body {
                   @include flex-jc-ai(space-between, flex-end);
                   .definition-info {
                     h2 {
-                      font-size: 40px;
+                      font-size: 26px;
                       margin-bottom: 9px;
 
                       @media (max-width: 580px) {
@@ -2489,6 +2508,24 @@ body {
           }
         }
       }
+       //login_required page
+    .login-required {
+      font-family: $venuri;
+      color: $darkBlue;
+      .container {
+        padding: 100px 0;
+        h2{
+          font-size: 29px;
+          line-height: 30px;
+      }
+      h3{
+        font-size: 20px;
+        a{
+          font-size: 18px;  
+        }
+      }
+      }
+  }
       section.about-project-section {
         .container {
           min-width: 262px;
@@ -2730,9 +2767,7 @@ body {
             }
           }
           .pagination {
-            justify-content: space-between;
             width: 100%;
-
             .left-arrow {
               display: block;
               transition: all 0.3s;
@@ -3328,7 +3363,6 @@ body {
             }
           }
           .pagination {
-            justify-content: space-between;
             width: 100%;
             .left-arrow {
               display: block;
